fixed sidebar layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,14 @@ body {
   display: block;
 }
 
+.dashboard {
+  margin-top: 200px;
+  margin-left: 200px;
+}
 
+
+@media screen and (max-width: 1200px) {
+  body {
+   overflow: visible;
+  }
+}
